<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/EventFinderStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:paddingTop="5dp"
        android:text="@string/search"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate">

        <RadioButton
            android:id="@+id/rbToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:onClick="onRadioButtonClicked"
            android:padding="5dp"
            android:text="@string/today"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rbThisWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:onClick="onRadioButtonClicked"
            android:padding="5dp"
            android:text="@string/this_week"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rbNextWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            android:onClick="onRadioButtonClicked"
            android:padding="5dp"
            android:text="@string/next_week"
            android:textColor="#000000" />
    </RadioGroup>

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/search_location_hint"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/etKeyword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/search_keyword_hint"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLocation" />

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#c6e2ff"
        android:contentDescription="@string/search"
        android:padding="5dp"
        android:src="@drawable/selector_search"
        app:layout_constraintBottom_toTopOf="@+id/lvResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etKeyword" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="384dp"
        android:layout_marginStart="384dp"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/lvResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lvResults" />

    <ListView
        android:id="@+id/lvResults"
        android:layout_width="0dp"
        android:layout_height="209dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/rubik_light"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
